--- a/class/5주차/2023.03.30/practice/views/index.ejs
+++ b/class/5주차/2023.03.30/practice/views/index.ejs
@@ -68,9 +68,9 @@
     <h2>실습2. axios post 로그인</h2>
     <form name = 'login2'>
         <label for="username">아이디</label>
-        <input type="text" id="id" name="id" />
+        <input type="text" id="id" name="id" required/>
         <label for="password">비밀번호</label>
-        <input type="password" id="pw" name="pw" />
+        <input type="password" id="pw" name="pw" required/>
         <button type ="button" onclick="axiosPost();">로그인</button>
     </form>
     <div class="login-result"></div>
