mvc - visitor mysql 데이터베이스 연결

--- a/class/5주차/2023.03.30/practice/views/practice1.ejs
+++ b/class/5주차/2023.03.30/practice/views/practice1.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>동적 폼 실습</title>
+    <title>동적 로그인 실습</title>
     <!-- axios 실습 위한 axios CDN -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
