--- a/13_mvc_mysql/views/visitor.ejs
+++ b/13_mvc_mysql/views/visitor.ejs
@@ -34,7 +34,7 @@
         <th>삭제</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class = 'tbody'>
       <% for (let i = 0; i < data.length; i++) { %>
       <tr id="tr_<%= data[i].id %>">
         <td><%= data[i].id %></td>
@@ -46,7 +46,7 @@
           </button>
         </td>
         <td>
-          <button type="button">
+          <button type="button" onclick = "deleteVisitor(this, '<%= data[i].id %>')">
             삭제
           </button>
         </td>
@@ -56,6 +56,32 @@
   </table>
   <script>
     const tbody = document.querySelector('tbody');
+
+    function deleteVisitor(obj, id) {
+        console.log('obj', obj);
+        console.log('id', id);
+
+        if (!confirm('정말 삭제하시겠습니까?')) { // !false = true (취소 버튼을 누르면)
+            return;
+        } 
+
+        // confirm에서 [확인] 버튼 클릭시 실행할 코드
+        axios ({
+            method: 'delete',
+            url: '/visitor/delete',
+            data: {
+                id: id // 매개변수로 받고 있는 id
+            }
+        }).then((res) => {
+            console.log(res.data);
+
+           // 1.첫번째 방법
+           //obj.parentElement.parentElement.remove();
+           
+           // 2.두번째 방법
+           obj.closest(`#tr_${id}`).remove();
+        });
+    }
 
     //폼에 있는 등록버튼 클릭시
     // -테이블 데이터 추가
@@ -78,8 +104,9 @@
             <td>${res.data.name}</td>
             <td>${res.data.comment}</td>
             <td><button type="button">수정</button></td>
-            <td><button type="button">삭제</button></td>
+            <td><button type="button" onclick = "deleteVisitor(this, ${res.data.id})">삭제</button></td>
           </tr>`;
+
           // insertADjacentHTML(): 특정 요소에 html 추가
           // vs. innerHTML : 내부 코드 덮어씌움
           tbody.insertAdjacentHTML('beforeend', newVisitor);
