--- a/14_sequelize/views/visitor.ejs
+++ b/14_sequelize/views/visitor.ejs
@@ -106,7 +106,7 @@
         console.log(res.data);
 
         // 1. 수정 성공 alert 띄우기
-        alert(res.data);
+        alert('수정 완료!');
 
         // 2. 수정 내용 반영
         const children = document.querySelector(`#tr_${id}`).children;
