--- a/14_sequelize/views/index.ejs
+++ b/14_sequelize/views/index.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>MVC패턴과 MYSQL 연결</h1>
-    <a href="/visitor">방명록 남기기</a>
+    <a href ="/visitor">방명록 남기기</a>
+    <a href ="/user/signup">회원가입</a>
+    <a href ="/user/signin">로그인</a>
 </body>
 </html>
