--- a/14_sequelize/views/profile.ejs
+++ b/14_sequelize/views/profile.ejs
@@ -61,7 +61,7 @@
         const form = document.forms['form_profile'];
         axios({
           method:'POST',
-          url: 'user/profile/delete',
+          url: 'profile/delete',
           data: {
             id: form.id.value
           }
